crates/jsonschema-macros/tests/ui/invalid_dependent_schemas_type.stderr
error: 42 is not of types "boolean", "object"
 --> tests/ui/invalid_dependent_schemas_type.rs:1:1
  |
1 | / #[jsonschema::validator(
2 | |     schema = r#"{"dependentSchemas":{"foo":42}}"#,
3 | |     draft = referencing::Draft::Draft201909
4 | | )]
  | |__^
  |
  = note: this error originates in the attribute macro `jsonschema::validator` (in Nightly builds, run with -Z macro-backtrace for more info)
