crates/jsonschema-macros/tests/ui/invalid_dependent_schemas_type.rs
#[jsonschema::validator(
    schema = r#"{"dependentSchemas":{"foo":42}}"#,
    draft = referencing::Draft::Draft201909
)]
struct InvalidDependentSchemasTypeValidator;

fn main() {}
